Add device deletion management
